alignment and style fixed

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,18 @@
+img, p, h2, h1{
+    display: block;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 13px;
+}
+li{
+    padding-bottom: 16px;
+}
+img{
+    border: white solid 10px;
+}
+
 body{
-    background-color: bisque;
+    background-color: bisque;    
 }
 
 .title{
